php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #31371 highlight_file () and missing line return after heredoc closing statement
Submitted: 2005-01-01 01:17 UTC Modified: 2005-01-03 00:55 UTC
From: justin at superglobals dot com Assigned:
Status: Closed Package: Scripting Engine problem
PHP Version: 5.0.3 OS: FreeBSD 5.2.1
Private report: No CVE-ID: None
 [2005-01-01 01:17 UTC] justin at superglobals dot com
Description:
------------
highlight_file () doesn't seem to be understanding heredoc's quite right. It forgets to place a line return after the closing heredoc tag.

Reproduce code:
---------------
test.php

<?php
$here = <<<DOC
asdf
asdf
asdf
DOC;
highlight_file ('test.php');
?>

Expected result:
----------------
<?php
$here = <<<DOC
asdf
asdf
asdf
DOC;
highlight_file ('test.php');
?> 

Actual result:
--------------
<?php
$here = <<<DOC
asdf
asdf
asdf
DOC;highlight_file ('test.php');
?> 

Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2005-01-02 20:22 UTC] rasmus@php.net
Yup, this is an annoying bug I have run across as well.
 [2005-01-03 00:55 UTC] iliaa@php.net
This bug has been fixed in CVS.

Snapshots of the sources are packaged every three hours; this change
will be in the next snapshot. You can grab the snapshot at
http://snaps.php.net/.
 
Thank you for the report, and for helping us make PHP better.


 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Sun Sep 27 11:00:01 2026 UTC