MFH: Fixed bug #31371 (highlight_file() trims new line after heredoc).